--- a/MillionCoinFlips/MillionCoinFlips/MillionCoinFlips.csproj
+++ b/MillionCoinFlips/MillionCoinFlips/MillionCoinFlips.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37E3141C-3C3E-42E6-A114-BDB0FB2F32B0}</ProjectGuid>
+    <ProjectGuid>{C1D0021F-EE6E-48F9-8098-21374B2C4924}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>probabilitiesOdds</RootNamespace>
-    <AssemblyName>probabilitiesOdds</AssemblyName>
+    <RootNamespace>MillionCoinFlips</RootNamespace>
+    <AssemblyName>MillionCoinFlips</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,15 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coin.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="DevelopmentNotes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
